'upgrades/fixes - added oracle/mssql using hibernate 7'